--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   },
   "dependencies": {
     "react": "16.8.6",
-    "react-native": "0.60.5"
+    "react-native": "0.60.5",
+    "react-native-game-engine": "^0.12.3",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
