--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/slider": "^2.0.2",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-game-engine": "^0.12.3",
