--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@react-native-community/slider": "^2.0.2",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-elements": "^1.2.6",
     "react-native-game-engine": "^0.12.3",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.4"
   },
