--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "android": "react-native run-android"
   },
   "dependencies": {
     "@react-native-community/slider": "^2.0.2",
@@ -13,6 +14,7 @@
     "react-native-elements": "^1.2.6",
     "react-native-game-engine": "^0.12.3",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-unimodules": "^0.7.0-rc.4",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.4"
