Startign game integration

--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "@react-native-community/slider": "^2.0.2",
-    "expo-gl": "^7.0.0",
-    "expo-gl-cpp": "^7.0.0",
     "@react-native-firebase/app": "^6.0.3",
     "@react-native-firebase/auth": "^6.0.3",
     "@react-native-firebase/firestore": "^6.0.3",
+    "expo-gl": "^7.0.0",
+    "expo-gl-cpp": "^7.0.0",
+    "expo-phaser": "0.0.1-alpha.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-elements": "^1.2.6",
