--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-unimodules": "^0.7.0-rc.4",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.9.4"
+    "react-navigation-stack": "^1.9.4",
+    "sensorama": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
